# Glimpse

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING  HACKING.md  INSTALL.in  LICENSE  MAINTAINERS  Makefile.am  NEWS  ORIGINAL_AUTHORS  README  README.i18n  README.md  Vagrantfile  authors.dtd  authors.xml  authors.xsl  authors4glimpse-web.xsl  autogen.sh  confdefs.h  configure.ac  configure.new  gimp-zip.in  gimp.sh  glimpse-vagrant.sh  glimpse-vagrant.yml  glimpse.doap
.github/: FUNDING.yml  funding.yml
app/: .gitignore  Makefile.am  about.h  app.c  errors.c  gimp-update.c  gimp-version.c  main.c  sanity.c  signals.c
app-tools/: Makefile.am  gimp-debug-tool.c
build-aux/: glimpse_versions.json
desktop/: .gitignore  Makefile.am  app.getglimpse.Glimpse.appdata.xml.in.in  app.getglimpse.Glimpse.desktop.in.in  glimpse-data-extras.metainfo.xml.in.in  org.glimpse_editor.Glimpse.appdata.xml.in.in  org.glimpse_editor.Glimpse.desktop.in.in  test-appdata.sh  test-appdata.sh.in  test-desktop.sh
devel-docs/: Makefile.am  README  README.gtkdoc  debug-plug-ins.txt  icons.txt  includes.txt  parasites.txt  release-howto.txt  release-stats.sh  structure.xml  xcf.txt
devel-docs/libglimpse/: .gitignore  Makefile.am  libglimpse-docs.sgml  libglimpse-include.c  libglimpse.types
devel-docs/libglimpsewidgets/: .gitignore  Makefile.am  libglimpsewidgets-docs.sgml  libglimpsewidgets-sections.txt  libglimpsewidgets.types
devel-docs/libglimpsewidgets/tmpl/: .gitignore
devel-docs/tools/: Makefile.am  README.shooter  shooter.c  units.c  widgets.c
docs/: gimp.1.in  gimprc.5.in
etc/: gimprc.in
icons/: Makefile.am  icon-list.mk
libgimp/: Makefile.am  gimp.c  gimpdisplay_pdb.c  gimpexport.c  gimpplugin_pdb.c
libgimpbase/: Makefile.am  gimpbaseenums.c  gimpbaseenums.h  gimpenv.c  gimpmetadata.c
libgimpcolor/: gimpcolorprofile.c
libgimpconfig/: gimpcolorconfig.c
libglimpse/: Makefile.am  gimp.c  gimp.h  gimp_pdb.c  gimp_pdb.h  gimp_pdb_headers.h  gimpaspectpreview.c  gimpaspectpreview.h  gimpbrush_pdb.c  gimpbrush_pdb.h  gimpbrushes.c  gimpbrushes.h  gimpbrushes_pdb.c  gimpbrushes_pdb.h  gimpbrushmenu.c  gimpbrushmenu.h  gimpbrushselect.c  gimpbrushselect.h  gimpbrushselect_pdb.c  gimpbrushselect_pdb.h  gimpbrushselectbutton.c  gimpbrushselectbutton.h  gimpbuffer_pdb.c  gimpbuffer_pdb.h  gimpchannel.c  gimpchannel.h  gimpchannel_pdb.c  gimpchannel_pdb.h  gimpcolor_pdb.c  gimpcolor_pdb.h  gimpcontext_pdb.c  gimpcontext_pdb.h  gimpdebug_pdb.c  gimpdebug_pdb.h  gimpdisplay_pdb.c  gimpdisplay_pdb.h  gimpdrawable.c  gimpdrawable.h  gimpdrawable_pdb.c  gimpdrawable_pdb.h  (+184 more)
libglimpsecolor/: Makefile.am  gimpadaptivesupersample.c  gimpadaptivesupersample.h  gimpbilinear.c  gimpbilinear.h  gimpcairo.c  gimpcairo.h  gimpcmyk.c  gimpcmyk.h  gimpcolor.h  gimpcolormanaged.c  gimpcolormanaged.h  gimpcolorprofile.c  gimpcolorprofile.h  gimpcolorspace.c  gimpcolorspace.h  gimpcolortransform.c  gimpcolortransform.h  gimpcolortypes.h  gimphsl.c  gimphsl.h  gimphsv.c  gimphsv.h  gimppixbuf.c  gimppixbuf.h  gimprgb-parse.c  gimprgb.c  gimprgb.h
libglimpseconfig/: Makefile.am  gimpcolorconfig.c  gimpcolorconfig.h  gimpconfig-deserialize.c  gimpconfig-deserialize.h  gimpconfig-error.c  gimpconfig-error.h  gimpconfig-iface.c  gimpconfig-iface.h  gimpconfig-params.h  gimpconfig-path.c  gimpconfig-path.h  gimpconfig-serialize.c  gimpconfig-serialize.h  gimpconfig-utils.c  gimpconfig-utils.h  gimpconfig.h  gimpconfigenums.c  gimpconfigenums.h  gimpconfigtypes.h  gimpconfigwriter.c  gimpconfigwriter.h  gimpscanner.c  gimpscanner.h
libglimpsemath/: Makefile.am  gimpmath.h  gimpmathtypes.h  gimpmatrix.c  gimpmatrix.h  gimpmd5.c  gimpmd5.h  gimpvector.c  gimpvector.h
pdb/: Makefile.am  (+7 more)
plug-ins/file-bmp/: Makefile.am  bmp-load.c  bmp-save.c  bmp.c
plug-ins/file-dds/: Makefile.am  dds.c  ddsread.c  ddswrite.c  misc.c
plug-ins/file-exr/: Makefile.am  file-exr.c  openexr-wrapper.cc
plug-ins/file-faxg3/: Makefile.am  faxg3.c
plug-ins/file-ico/: Makefile.am  ico-dialog.c  ico-load.c  ico-save.c  ico.c
plug-ins/file-jpeg/: Makefile.am  jpeg-load.c  jpeg-save.c  jpeg-settings.c  jpeg.c
plug-ins/file-psd/: Makefile.am  psd-image-res-load.c  psd-layer-res-load.c  psd-load.c  psd-save.c  psd-thumb-load.c  psd-util.c  psd.c
plug-ins/file-sgi/: Makefile.am  sgi.c
plug-ins/file-tiff/: Makefile.am  file-tiff-io.c  file-tiff-load.c  file-tiff-save.c  file-tiff.c
plug-ins/file-webp/: Makefile.am  file-webp-dialog.c  file-webp-load.c  file-webp-save.c  file-webp.c
plug-ins/flame/: Makefile.am  flame.c  libifs.c
plug-ins/fractal-explorer/: Makefile.am  fractal-explorer-dialogs.c  fractal-explorer.c
plug-ins/gfig/: Makefile.am  gfig-arc.c  gfig-bezier.c  gfig-circle.c  gfig-dialog.c  gfig-dobject.c  gfig-ellipse.c  gfig-grid.c  gfig-line.c  gfig-poly.c  gfig-preview.c  gfig-rectangle.c  gfig-spiral.c  gfig-star.c  gfig-stock.c  gfig-style.c  gfig-style.h  gfig.c
plug-ins/gimpressionist/: Makefile.am  brush.c  color.c  general.c  gimp.c  gimpressionist.c  gimpressionist.h  globals.c  orientation.c  orientmap.c  paper.c  placement.c  plasma.c  ppmtool.c  presets.c  preview.c  repaint.c  size.c  sizemap.c  utils.c
plug-ins/gradient-flare/: Makefile.am  gradient-flare.c
plug-ins/help-browser/: Makefile.am  dialog.c  help-browser.c
plug-ins/ifs-compose/: Makefile.am  ifs-compose-storage.c  ifs-compose-utils.c  ifs-compose.c
plug-ins/lighting/: Makefile.am  lighting-apply.c  lighting-image.c  lighting-image.h  lighting-main.c  lighting-preview.c  lighting-shade.c  lighting-ui.c
plug-ins/map-object/: Makefile.am  arcball.c  map-object-apply.c  map-object-image.c  map-object-main.c  map-object-preview.c  map-object-shade.c  map-object-ui.c
plug-ins/metadata/: Makefile.am  metadata-editor.c  metadata-impexp.c  metadata-tags.c  metadata-viewer.c  metadata-xml.c
plug-ins/pagecurl/: Makefile.am  pagecurl.c
plug-ins/print/: Makefile.am  print-draw-page.c  print-page-layout.c  print-page-setup.c  print-preview.c  print-settings.c  print-utils.c  print.c
(+1932 files in other folders)
